k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: react-ui
  name: react-ui
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: react-ui
    weight: 100
